--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,85 @@
+<div>
+  <nav class="bg-white dark:bg-gray-800 shadow">
+    <div class="max-w-7xl mx-auto px-8">
+      <div class="flex items-center justify-between h-16">
+        <div class="flex items-center">
+          <a class="text-xl text-gray-800 font-semibold font-heading" href="/">
+            Employees
+          </a>
+          <div class="hidden md:block">
+            <div class="ml-10 flex items-baseline space-x-4">
+              <a
+                class="
+                  text-gray-300
+                  hover:text-gray-800
+                  dark:hover:text-white
+                  px-3
+                  py-2
+                  rounded-md
+                  text-sm
+                  font-medium
+                "
+                href="/#"
+              >
+                Home
+              </a>
+              <a
+                class="
+                  text-gray-800
+                  dark:text-white
+                  hover:text-gray-800
+                  dark:hover:text-white
+                  px-3
+                  py-2
+                  rounded-md
+                  text-sm
+                  font-medium
+                "
+                href="/#"
+              >
+                Gallery
+              </a>
+              <a
+                class="
+                  text-gray-300
+                  hover:text-gray-800
+                  dark:hover:text-white
+                  px-3
+                  py-2
+                  rounded-md
+                  text-sm
+                  font-medium
+                "
+                href="/#"
+              >
+                Content
+              </a>
+              <a
+                class="
+                  text-gray-300
+                  hover:text-gray-800
+                  dark:hover:text-white
+                  px-3
+                  py-2
+                  rounded-md
+                  text-sm
+                  font-medium
+                "
+                href="/#"
+              >
+                Contact
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="block">
+          <div class="ml-4 flex items-center md:ml-6"></div>
+        </div>
+      </div>
+    </div>
+  </nav>
+</div>
+
 <div class="container mx-auto">
-  <app-employee-list></app-employee-list>
+  <router-outlet></router-outlet>
 </div>
