--- a/frontend/src/app/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
 <h2 class="text-2xl leading-tight my-3">Employees</h2>
-<table class="table p-4 bg-white shadow rounded-lg w-full">
+<table class="table p-4 bg-white shadow rounded-lg w-full text-left">
   <thead>
     <tr>
       <th
