--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,79 +1,30 @@
 <div>
-  <nav class="bg-white dark:bg-gray-800 shadow">
-    <div class="max-w-7xl mx-auto px-8">
+  <nav class="bg-white shadow dark:bg-gray-800">
+    <div class="px-8 mx-auto max-w-7xl">
       <div class="flex items-center justify-between h-16">
         <div class="flex items-center">
-          <a class="text-xl text-gray-800 font-semibold font-heading" href="/">
+          <a class="text-xl font-semibold text-gray-800 font-heading" href="/">
             Employees
           </a>
           <div class="hidden md:block">
-            <div class="ml-10 flex items-baseline space-x-4">
+            <div class="flex items-baseline ml-10 space-x-4">
               <a
-                class="
-                  text-gray-300
-                  hover:text-gray-800
-                  dark:hover:text-white
-                  px-3
-                  py-2
-                  rounded-md
-                  text-sm
-                  font-medium
-                "
-                href="/#"
+                class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md  hover:text-gray-800 dark:hover:text-white"
+                routerLink="employees"
               >
-                Home
+                Employees
               </a>
               <a
-                class="
-                  text-gray-800
-                  dark:text-white
-                  hover:text-gray-800
-                  dark:hover:text-white
-                  px-3
-                  py-2
-                  rounded-md
-                  text-sm
-                  font-medium
-                "
-                href="/#"
+                class="px-3 py-2 text-sm font-medium text-gray-800 rounded-md  dark:text-white hover:text-gray-800 dark:hover:text-white"
+                routerLink="create"
               >
-                Gallery
-              </a>
-              <a
-                class="
-                  text-gray-300
-                  hover:text-gray-800
-                  dark:hover:text-white
-                  px-3
-                  py-2
-                  rounded-md
-                  text-sm
-                  font-medium
-                "
-                href="/#"
-              >
-                Content
-              </a>
-              <a
-                class="
-                  text-gray-300
-                  hover:text-gray-800
-                  dark:hover:text-white
-                  px-3
-                  py-2
-                  rounded-md
-                  text-sm
-                  font-medium
-                "
-                href="/#"
-              >
-                Contact
+                Add
               </a>
             </div>
           </div>
         </div>
         <div class="block">
-          <div class="ml-4 flex items-center md:ml-6"></div>
+          <div class="flex items-center ml-4 md:ml-6"></div>
         </div>
       </div>
     </div>
