--- a/frontend/src/app/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee-list/employee-list.component.html
@@ -38,6 +38,7 @@
       >
         Email
       </th>
+      <th class="border-b-2 dark:border-dark-5"></th>
     </tr>
   </thead>
   <tbody>
@@ -47,6 +48,53 @@
       </td>
       <td class="p-4 border-b-2 dark:border-dark-5">{{ employee.lastName }}</td>
       <td class="p-4 border-b-2 dark:border-dark-5">{{ employee.emailId }}</td>
+      <td class="border-b-2 dark:border-dark-5">
+        <button
+          (click)="updateEmployee(employee.id)"
+          type="button"
+          class="
+            flex
+            items-center
+            justify-center
+            w-10
+            h-10
+            p-1
+            text-base
+            font-semibold
+            text-center text-blue-500
+            transition
+            duration-200
+            ease-in
+            bg-blue-100
+            rounded-full
+            shadow-md
+            hover:bg-blue-200
+            focus:ring-blue-500
+            focus:ring-offset-blue-200
+            focus:outline-none
+            focus:ring-2
+            focus:ring-offset-2
+          "
+        >
+          <svg
+            width="20"
+            height="20"
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fas"
+            data-icon="edit"
+            class="svg-inline--fa fa-edit fa-w-18"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 576 512"
+          >
+            <path
+              fill="currentColor"
+              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
+            ></path>
+          </svg>
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
