--- a/frontend/src/app/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee-list/employee-list.component.html
@@ -1,5 +1,17 @@
-<h2 class="my-3 text-2xl leading-tight">Employees</h2>
-<table class="table w-full p-4 text-left bg-white rounded-lg shadow">
+<h2
+  class="
+    text-center
+    mt-6
+    mb-2
+    text-xl text-gray-800
+    sm:text-2xl
+    dark:text-white
+    mx-auto
+  "
+>
+  Employees
+</h2>
+<table class="table max-w-4xl p-4 text-left bg-white rounded-lg shadow mx-auto">
   <thead>
     <tr>
       <th
@@ -66,10 +78,9 @@
               transition
               duration-200
               ease-in
-              bg-blue-100
+              bg-white
               rounded-full
-              shadow-md
-              hover:bg-blue-200
+              hover:bg-blue-100
               focus:ring-blue-500
               focus:ring-offset-blue-200
               focus:outline-none
@@ -111,10 +122,9 @@
               transition
               duration-200
               ease-in
-              bg-red-100
+              bg-white
               rounded-full
-              shadow-md
-              hover:bg-red-200
+              hover:bg-red-100
               focus:ring-red-500
               focus:ring-offset-red-200
               focus:outline-none
