--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,30 +2,37 @@
   <nav class="bg-white shadow dark:bg-gray-800">
     <div class="px-8 mx-auto max-w-7xl">
       <div class="flex items-center justify-between h-16">
-        <div class="flex items-center">
-          <a class="text-xl font-semibold text-gray-800 font-heading" href="/">
-            Employees
-          </a>
-          <div class="hidden md:block">
-            <div class="flex items-baseline ml-10 space-x-4">
-              <a
-                class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md  hover:text-gray-800 dark:hover:text-white"
-                routerLink="employees"
-              >
-                Employees
-              </a>
-              <a
-                class="px-3 py-2 text-sm font-medium text-gray-800 rounded-md  dark:text-white hover:text-gray-800 dark:hover:text-white"
-                routerLink="create"
-              >
-                Add
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="block">
-          <div class="flex items-center ml-4 md:ml-6"></div>
-        </div>
+        <a
+          class="text-xl font-semibold text-gray-800 font-heading"
+          routerLink="employees"
+        >
+          Employees
+        </a>
+        <button
+          type="submit"
+          routerLink="create"
+          class="
+            px-4
+            py-2
+            text-base
+            font-semibold
+            text-center text-white
+            transition
+            duration-200
+            ease-in
+            bg-purple-600
+            rounded-lg
+            shadow-md
+            hover:bg-purple-700
+            focus:ring-purple-500
+            focus:ring-offset-purple-200
+            focus:outline-none
+            focus:ring-2
+            focus:ring-offset-2
+          "
+        >
+          New Employee
+        </button>
       </div>
     </div>
   </nav>
