--- a/frontend/src/app/update-employee/update-employee.component.html
+++ b/frontend/src/app/update-employee/update-employee.component.html
@@ -1,171 +1,165 @@
+<h2
+  class="
+    text-center
+    mt-6
+    mb-2
+    text-xl text-gray-800
+    sm:text-2xl
+    dark:text-white
+    mx-auto
+  "
+>
+  Edit employee
+</h2>
 <div
   class="
     flex flex-col
     max-w-2xl
-    px-4
-    py-8
+    p-6
     mx-auto
-    mt-8
     bg-white
     rounded-lg
     shadow
     dark:bg-gray-800
-    sm:px-6
-    md:px-8
-    lg:px-10
   "
 >
-  <div
-    class="
-      self-center
-      mb-2
-      text-xl
-      font-light
-      text-gray-800
-      sm:text-2xl
-      dark:text-white
-    "
-  >
-    Create new employee
-  </div>
-  <div class="p-6 mt-4">
-    <form (ngSubmit)="onSubmit()">
-      <div class="flex flex-col mb-2">
-        <div class="relative">
-          <input
-            type="text"
-            id="first-name"
-            class="
-              flex-1
-              w-full
-              px-4
-              py-2
-              text-base text-gray-700
-              placeholder-gray-400
-              bg-white
-              border border-transparent border-gray-300
-              rounded-lg
-              shadow-sm
-              appearance-none
-              focus:outline-none
-              focus:ring-2
-              focus:ring-purple-600
-              focus:border-transparent
-            "
-            name="first-name"
-            placeholder="First Name"
-            [(ngModel)]="employee.firstName"
-          />
-        </div>
-      </div>
-      <div class="flex flex-col mb-2">
-        <div class="relative">
-          <input
-            type="text"
-            id="last-name"
-            class="
-              flex-1
-              w-full
-              px-4
-              py-2
-              text-base text-gray-700
-              placeholder-gray-400
-              bg-white
-              border border-transparent border-gray-300
-              rounded-lg
-              shadow-sm
-              appearance-none
-              focus:outline-none
-              focus:ring-2
-              focus:ring-purple-600
-              focus:border-transparent
-            "
-            name="last-name"
-            placeholder="Last Name"
-            [(ngModel)]="employee.lastName"
-          />
-        </div>
-      </div>
-      <div class="flex flex-col mb-2">
-        <div class="relative">
-          <input
-            type="text"
-            id="e"
-            class="
-              flex-1
-              w-full
-              px-4
-              py-2
-              text-base text-gray-700
-              placeholder-gray-400
-              bg-white
-              border border-transparent border-gray-300
-              rounded-lg
-              shadow-sm
-              appearance-none
-              focus:outline-none
-              focus:ring-2
-              focus:ring-purple-600
-              focus:border-transparent
-            "
-            name="email"
-            placeholder="Email"
-            [(ngModel)]="employee.emailId"
-          />
-        </div>
-      </div>
-      <div class="grid grid-cols-2 gap-2 w-full my-4">
-        <button
-          type="submit"
+  <form (ngSubmit)="onSubmit()">
+    <div class="flex flex-col mb-2">
+      <div class="relative">
+        <input
+          type="text"
+          id="first-name"
           class="
+            flex-1
             w-full
             px-4
             py-2
-            text-base
-            font-semibold
-            text-center text-purple-600
-            transition
-            duration-200
-            ease-in
+            text-base text-gray-700
+            placeholder-gray-400
             bg-white
+            border border-transparent border-gray-300
             rounded-lg
-            shadow-md
-            hover:bg-gray-100
-            focus:ring-purple-500
-            focus:ring-offset-purple-200
+            shadow-sm
+            appearance-none
             focus:outline-none
             focus:ring-2
-            focus:ring-offset-2
+            focus:ring-purple-600
+            focus:border-transparent
           "
-        >
-          Cancel
-        </button>
-        <button
-          type="submit"
+          name="first-name"
+          placeholder="First Name"
+          [(ngModel)]="employee.firstName"
+        />
+      </div>
+    </div>
+    <div class="flex flex-col mb-2">
+      <div class="relative">
+        <input
+          type="text"
+          id="last-name"
           class="
+            flex-1
             w-full
             px-4
             py-2
-            text-base
-            font-semibold
-            text-center text-white
-            transition
-            duration-200
-            ease-in
-            bg-purple-600
+            text-base text-gray-700
+            placeholder-gray-400
+            bg-white
+            border border-transparent border-gray-300
             rounded-lg
-            shadow-md
-            hover:bg-purple-700
-            focus:ring-purple-500
-            focus:ring-offset-purple-200
+            shadow-sm
+            appearance-none
             focus:outline-none
             focus:ring-2
-            focus:ring-offset-2
+            focus:ring-purple-600
+            focus:border-transparent
           "
-        >
-          Add
-        </button>
+          name="last-name"
+          placeholder="Last Name"
+          [(ngModel)]="employee.lastName"
+        />
       </div>
-    </form>
-  </div>
+    </div>
+    <div class="flex flex-col mb-2">
+      <div class="relative">
+        <input
+          type="text"
+          id="e"
+          class="
+            flex-1
+            w-full
+            px-4
+            py-2
+            text-base text-gray-700
+            placeholder-gray-400
+            bg-white
+            border border-transparent border-gray-300
+            rounded-lg
+            shadow-sm
+            appearance-none
+            focus:outline-none
+            focus:ring-2
+            focus:ring-purple-600
+            focus:border-transparent
+          "
+          name="email"
+          placeholder="Email"
+          [(ngModel)]="employee.emailId"
+        />
+      </div>
+    </div>
+    <div class="grid grid-cols-2 gap-2 w-full mt-4">
+      <button
+        (click)="toEmployeeList()"
+        type="button"
+        class="
+          w-full
+          px-4
+          py-2
+          text-base
+          font-semibold
+          text-center text-purple-600
+          transition
+          duration-200
+          ease-in
+          bg-white
+          rounded-lg
+          shadow-md
+          hover:bg-gray-100
+          focus:ring-purple-500
+          focus:ring-offset-purple-200
+          focus:outline-none
+          focus:ring-2
+          focus:ring-offset-2
+        "
+      >
+        Cancel
+      </button>
+      <button
+        type="submit"
+        class="
+          w-full
+          px-4
+          py-2
+          text-base
+          font-semibold
+          text-center text-white
+          transition
+          duration-200
+          ease-in
+          bg-purple-600
+          rounded-lg
+          shadow-md
+          hover:bg-purple-700
+          focus:ring-purple-500
+          focus:ring-offset-purple-200
+          focus:outline-none
+          focus:ring-2
+          focus:ring-offset-2
+        "
+      >
+        Save
+      </button>
+    </div>
+  </form>
 </div>
